public/conway_game/conway.css
a {
    text-decoration: none;
    color: rgb(202, 202, 202);
}

nav {
    background-color: rgb(19, 19, 19);
    color: rgb(202, 202, 202);
    font-family: 'PT Mono', monospace;
    padding-bottom: 1rem;
    height: 2rem;
}
  
nav p{
    float:left;
    text-align: center;
    font-size: 1rem;
    padding-right:5vw;
    padding-left: 2vw;
}

.nav-right {
    float: right;
}

.alive-cell {
    background-color: black;
}

.dead-cell {
    background-color: white;
}

[class*="cell"] {
    height: 1.75em;
    width: 1.75em;
    border: 1px;
    border-color: black;
    border-style: solid;
    display: inline-block;
    margin-left: -1px;
}

.row {
    margin-top: -7px;

}

.button {
    font-size: 2em; 
    border: 1px solid black;
    display: inline;
    padding: 1px 20px;
    cursor: pointer;
}

.main-body {
    width: 50em;
    margin: auto;
    background-color: #8bff56 ;
    padding: 5rem;
}

body {
    background-image: url(leaves2.jpg);
    font-family: 'Dela Gothic One', cursive;
    color: #070707;
    padding: 0;
    margin: 0;
    height: 100vh;
}

h1 {
    font-size: 3.5em;
    text-align: center;
}

h2 {
    font-size: 2em;
}

h3 {
    font-size: 1.5em;
}

.game {
    text-align: center;
}

img {
    height: 4em;
}

footer {
    padding: 2rem 7rem;
    font-size: 1.2rem;
    background-color: rgb(19, 19, 19);
    color: rgb(202, 202, 202);
    font-family: 'PT Mono', monospace;
}

footer .foot-row {
display: flex;
}

footer .foot-col {
flex: 33%;
}

footer .right-align {
text-align: right;
}

@media only screen and (max-width: 800px) {
    html {
        font-size: 8px;
    }

    .main-body {
        max-width: 80vw;
        min-height: 90vh;
    }

    body {
        background-image: none;
        background-color: #8bff56 ;
    }

    footer {
        padding: 2rem 2rem;
    }
}

